tests/snapshots/minimal/tests__simple_2sat.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true
var 2 = true

----- stderr -----

Interactions
  Total               13_499
    Depth              6_171
    Breadth                2
  Annihilate           6_826
  Commute                148
  Copy                 1_675
  Erase                1_762
  Expand               1_057
  Call                 1_356
  Branch                 675

Memory
  Heap                 5_360 B
  Allocated          285_792 B
  Freed              285_792 B

[Performance...]
