tests/snapshots/minimal/tests__tautology_only.snap
---
source: tests/tests.rs
info:
  program: vine
  args:
    - run
    - dpll/main.vi
    - "--breadth-first"
---
success: true
exit_code: 0
----- stdout -----
satisfiable
evaluation under model: true
var 1 = true

----- stderr -----

Interactions
  Total                6_980
    Depth              3_207
    Breadth                2
  Annihilate           3_545
  Commute                 68
  Copy                   844
  Erase                  919
  Expand                 556
  Call                   710
  Branch                 338

Memory
  Heap                 3_488 B
  Allocated          147_680 B
  Freed              147_680 B

[Performance...]
