tests/snapshots/minimal/tests__unit_chain_stderr.snap
---
source: tests/tests.rs
expression: stderr
---
Interactions
  Total               15_817
    Depth              6_935
    Breadth                2
  Annihilate           8_236
  Commute                163
  Copy                 1_796
  Erase                2_067
  Expand               1_281
  Call                 1_478
  Branch                 796

Memory
  Heap                 4_944 B
  Allocated          338_352 B
  Freed              338_352 B

[Performance...]
