tests/snapshots/minimal/tests__unit_chain_stdout.snap
---
source: tests/tests.rs
expression: stdout
---
satisfiable
evaluation under model: true
var 1 = true
var 2 = true
var 3 = true
var 4 = true
